@@ -1,3 +1,8 @@
+2001-05-11  Damon Chaplin  <damon@ximian.com>
+
+	* gtk-doc.spec.in: applied patch from Toshio Kuratomi
+	<badger@prtr-13.ucsc.edu>.
+
 2001-05-07  Joakim Ziegler  <joakim@ximian.com>
 
   * gtkdoc-mkdb.in: Added option --outputallsymbols to create a symbol list
